Wrap ImageCard in memo to avoid unnecessary re-renders

--- a/src/components/ImageCard.css
+++ b/src/components/ImageCard.css
@@ -52,9 +52,10 @@
 }
 
 .image-card__overlay hr {
-  width: 3rem;
+  width: 3.5rem;
   border-color: #fff;
   background-color: #fff;
+  margin: 0 auto;
 }
 
 .image-card__overlay p {
